Animated player run, idle, and jump animations. Animations for both directions functional, some bugs need to be fixed. 2/7 tasks complete for sprite animation and collision detection issue

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -37,3 +37,7 @@ body {
     text-align: center;
     font-size: 80px;
 }
+
+.d-none {
+    display: none;
+}
